fix background on iphones

--- a/Capros/game/game.css
+++ b/Capros/game/game.css
@@ -47,6 +47,7 @@ body {
   width: 100%;
   height: 100%;
   background-size: cover;
+  -webkit-background-size: cover;
   z-index: -1;
 
   --left: 0;
